test/parser/global-unexpected-token.delta.output
global-unexpected-token.delta:3:2: error: unexpected 'this'
 this // CHECK: [[@LINE]]:2: error: unexpected 'this'
 ^
