test/parser/global-unexpected-token.delta
// RUN: %check_errors %not %delta -parse %s

 this // CHECK: [[@LINE]]:2: error: unexpected 'this'
